@@ -5,6 +5,6 @@ from modules import fileHandling
 
 
 #{"empno": 0, "email": "test", "role": "admin"}
-#tkmenus.displayFile("accounts_emp", "jdkhjaslfl")
-#tkmenus.updateAccount_user({"empno": 0, "email": "test", "role": "admin"})
-tkmenus.firstMenu()
+tkmenus.displayFile("accounts_emp", "jdkhjaslfl")
+#tkmenus.updateAccount_emp({"empno": 0, "email": "test", "role": 3})
+#tkmenus.firstMenu()
